Text offset makes scale to fit not to work #68658

Closed
opened 2019-08-14 20:07:18 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 9c010c44f4 (blender2.81 HEAD)
Worked: never

Short description of error
Text offset (or textbox offset) makes scale to fit not to work.

Exact steps for others to reproduce the error

  • Write a long line
  • Set first text box width so it is smaller than the typed text
  • Change overflow to Scale to Fit
  • Change text offset and see how it mess things up

Or just open:
text_scale_to_fit_offset.blend

Current result:
image.png

"Expected" result:
image.png

**Blender Version** Broken: 9c010c44f420 (blender2.81 HEAD) Worked: never **Short description of error** Text offset (or textbox offset) makes scale to fit not to work. **Exact steps for others to reproduce the error** * Write a long line * Set first text box width so it is smaller than the typed text * Change overflow to Scale to Fit * Change text offset and see how it mess things up Or just open: [text_scale_to_fit_offset.blend](https://archive.blender.org/developer/F7664750/text_scale_to_fit_offset.blend) Current result: ![image.png](https://archive.blender.org/developer/F7664752/image.png) "Expected" result: ![image.png](https://archive.blender.org/developer/F7664756/image.png)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2019-08-14 20:08:04 +02:00

This issue was referenced by cb7ead2e3b

This issue was referenced by cb7ead2e3b62b9f1df85c985801db7918204dd2a
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68658
No description provided.