Fix T68658: Text offset makes scale to fit not to work

Differential Revision: https://developer.blender.org/D5484